[mod] 앱 이용방법 버튼 및 인디케이터 컬러 변경

--- a/app/src/main/res/drawable/shape_selected_indicator.xml
+++ b/app/src/main/res/drawable/shape_selected_indicator.xml
@@ -4,5 +4,5 @@
     android:shape="ring"
     android:thickness="4dp"
     android:useLevel="false">
-    <solid android:color="@color/black" />
+    <solid android:color="@color/gray_700" />
 </shape>
