--- a/app/src/main/res/layout/dialog_my_exit.xml
+++ b/app/src/main/res/layout/dialog_my_exit.xml
@@ -98,7 +98,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/spacingBase"
                 android:text="@string/cancel"
-                android:textColor="@color/green_500"
+                android:textColor="@color/gray_600"
                 app:layout_constraintEnd_toStartOf="@id/yes"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/nickname_detail_text" />
@@ -116,7 +116,7 @@
                 style="@style/Widget.Button.Dialog"
                 android:layout_height="wrap_content"
                 android:text="@string/my_membership_exit"
-                android:textColor="@color/gray_600"
+                android:textColor="@color/pink"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/no"
                 app:layout_constraintTop_toTopOf="@id/no" />
