[fix] 다이얼로그 버튼에서 default padding가 적용되어 높이가 달라보이는 버그 수정

--- a/app/src/main/res/layout/dialog_one_button.xml
+++ b/app/src/main/res/layout/dialog_one_button.xml
@@ -42,7 +42,7 @@
                 android:layout_width="match_parent"
                 app:layout_constraintTop_toTopOf="@id/yes" />
 
-            <Button
+            <TextView
                 android:id="@+id/yes"
                 style="@style/Widget.Button.Dialog"
                 android:layout_width="match_parent"
