--- a/app/src/main/res/layout/dialog_my_exit.xml
+++ b/app/src/main/res/layout/dialog_my_exit.xml
@@ -92,7 +92,7 @@
                 android:layout_width="match_parent"
                 app:layout_constraintTop_toTopOf="@id/yes" />
 
-            <Button
+            <TextView
                 android:id="@+id/no"
                 style="@style/Widget.Button.Dialog"
                 android:layout_height="wrap_content"
@@ -111,7 +111,7 @@
                 app:layout_constraintStart_toStartOf="@id/yes"
                 app:layout_constraintTop_toTopOf="@id/yes" />
 
-            <Button
+            <TextView
                 android:id="@+id/yes"
                 style="@style/Widget.Button.Dialog"
                 android:layout_height="wrap_content"
