--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -87,11 +87,11 @@
         <item name="android:background">@color/transparent</item>
     </style>
 
-    <style name="Widget.Button.Dialog" parent="Widget.Button">
+    <style name="Widget.Button.Dialog" parent="">
         <item name="android:layout_width">0dp</item>
-        <item name="android:outlineProvider">none</item>
         <item name="android:padding">@dimen/spacingBase</item>
         <item name="android:textAppearance">@style/TextAppearance.Suit.B3</item>
+        <item name="android:textAlignment">center</item>
     </style>
 
     <style name="Widget.Button.Icon.Navigation" parent="Widget.Button">
