[mod] 디데일 뷰 우측 상단 버튼 간격 조정

--- a/app/src/main/res/layout/fragment_wish_item_detail.xml
+++ b/app/src/main/res/layout/fragment_wish_item_detail.xml
@@ -40,7 +40,7 @@
                 style="@style/Widget.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:padding="@dimen/spacing10"
+                android:padding="@dimen/spacingSmall"
                 android:src="@drawable/ic_trash"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/edit"
@@ -51,8 +51,8 @@
                 style="@style/Widget.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="6dp"
-                android:padding="@dimen/spacing10"
+                android:layout_marginEnd="8dp"
+                android:padding="@dimen/spacingSmall"
                 android:src="@drawable/ic_nav_add"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
